deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conduit
  labels:
    kubernetes.io/metadata.name: conduit
